--- a/public/styles.css
+++ b/public/styles.css
@@ -294,6 +294,7 @@
       display: flex;
       justify-content: space-between;
       margin-bottom: 10px;
+      margin-left: 10px;
   }
   .container-experience-li a{
       font-size: 13px;
