--- a/public/styles.css
+++ b/public/styles.css
@@ -64,6 +64,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    float: left;
 }
 .p-0{
     color:#007DF2;
@@ -80,6 +81,7 @@
 .container-left-contact {
     width: 80%;
     height: auto;
+    float: left;
 }
 
 .contact {
@@ -140,14 +142,17 @@
 .container-right-main-item-top:nth-child(2),.container-right-main-item-top:nth-child(8),.container-right-main-item-top:nth-child(7), .container-right-main-item-top:nth-child(6), .container-right-main-item-top:nth-child(3), .container-right-main-item-top:nth-child(4), .container-right-main-item-top:nth-child(5) {
     margin-top: 15px;
     font-size: 14px;
+    clear: both;
 }
 
 .container-item-main-right-skill {
     width: 100%;
     height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-left: 20px;
+
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
 }
 
 .container-item-main-right-skill ul {
@@ -160,8 +165,11 @@
     width: 43%;
     list-style-type: disc;
     float: left;
-    margin-left: 30px;
+    margin-left: 15px;
     font-weight: 520;
+}
+.pp{
+    margin-top: 10px;
 }
 
 .p-2 {
@@ -176,7 +184,7 @@
 }
 
 .container-experience li {
-    margin-left: 30px;
+    margin-left: 15px;
 }
 
 .container-experience p {
